# BarryAppLauncher

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_appimage.fish  build_appimage.sh  build_release.sh  clihandler.cpp  clihandler.h  main.cpp  resources.qrc
AppDir/usr/share/applications/: barryapplauncher.desktop
managers/: appimagemanager.cpp  appimagemanager.h  clipboardmanager.cpp  clipboardmanager.h  errormanager.cpp  errormanager.h  settingsmanager.cpp  settingsmanager.h  updatepresetmanager.cpp  updatepresetmanager.h
models/: appimagemetadata.cpp  appimagemetadata.h  appimagemetadatalistmodel.cpp  appimagemetadatalistmodel.h  updatefiltermodel.h  updaterfiltermodel.h  updaterpresetmodel.h  updaterreleasemodel.h
providers/: memoryimageprovider.cpp  memoryimageprovider.h
qml/: About.qml  AppInfo.qml  AppList.qml  AppSettings.qml  ApplyUpdatePreset.qml  ColorButton.qml  CopyButton.qml  IconButton.qml  Main.qml  Preferences.qml  RoundedGroupBox.qml  RoundedTextArea.qml  TransparentTextArea.qml
qml/utils/: FormatterUtil.qml
utils/: appimageutil.cpp  appimageutil.h  archiveutil.cpp  archiveutil.h  jsonutil.h  networkutil.h  semverutil.h  stringutil.h  terminalutil.cpp  terminalutil.h  texteditorutil.cpp  texteditorutil.h  versionutil.h
utils/updater/: jsonupdater.cpp  jsonupdater.h  staticupdater.cpp  staticupdater.h  updaterfactory.cpp  updaterfactory.h
